[package]
authors = ["The LIT Protocol Team"]
categories = ["cryptography"]
description = "A Rust implementation of the OpenFHE framework."
edition = "2021"
homepage = "https://github.com/LIT-Protocol/openfhe-rs"
license = "Apache-2.0 OR MIT"
name = "openfhe-rs"
repository = "https://github.com/LIT-Protocol/openfhe-rs"
version = "0.1.0"

[features]
parallel = ["rayon"]

[dependencies]
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
subtle = "2.6"
thiserror = "1.0"
zeroize = { version = "1", features = ["derive", "serde"] }